View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023023 | Open CASCADE | OCCT:Data Exchange | public | 2012-03-14 12:23 | 2013-09-16 09:58 |
Reporter | vro | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2005 | ||
Product Version | 6.5.2 | ||||
Target Version | 6.5.3 | Fixed in Version | 6.5.3 | ||
Summary | 0023023: VRML reader fails on attempt to read an attached WRL file. | ||||
Description | VRML reader fails on attempt to read an attached WRL file. Different position of the closing square bracket ] causes the problem. The reader admits only one position of the bracket. Indeed, there are several variants of its location. | ||||
Steps To Reproduce | Load the attached WRL file by the draw-command: >loadvrml S 2056132060_2_tutnicht.wrl It returns: > ++ VRML Error: VrmlFormatError in line 615 | ||||
Tags | No tags attached. | ||||
Test case number | chl 934 W5 | ||||
|
2056132060_2_tutnicht.wrl (394,096 bytes) |
|
The bug is fixed. The file VrmlData_Geometry.cxx is put into a branch http://svn/svn/occt/branches/23023. The only modified method is TextureCoordinate::Read(). An error (VrmlFormatError) is replaced by a "continue" statement. |
|
Some unnecessary lines can be deleted, like 'continue' in this block of code. I made an update in the branch |
|
The code looks better now. Danke :-) ! |
|
Dear BugMaster, SVN branch http://svn/svn/occt/branches/23023 has been moved to GIT CR23023 one. Workbench KAS:dev:apn-23023-occt was created from git branch CR23023 (and apn-23023-products from svn trunk) and compiled on Linux platform. There are not regressions in apn-23023-products regarding to KAS:dev:products-20120320-opt Test case for this fix is chl 934 W5. It's OK. See results in /QADisk/occttests/results/KAS/dev/apn-23023-products_22032012/lin See reference results in /QADisk/occttests/results/KAS/dev/products-20120320-opt_20032012/lin See test cases in /QADisk/occttests/tests/ED |
|
W5 (624 bytes) |
|
Integrated into master |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-03-14 12:23 | vro | New Issue | |
2012-03-14 12:23 | vro | Assigned To | => vro |
2012-03-14 12:23 | vro | File Added: 2056132060_2_tutnicht.wrl | |
2012-03-14 12:38 | vro | Note Added: 0019965 | |
2012-03-14 12:38 | vro | Assigned To | vro => agv |
2012-03-14 12:38 | vro | Status | new => resolved |
2012-03-21 19:29 |
|
Note Added: 0020079 | |
2012-03-21 19:30 |
|
Status | resolved => reviewed |
2012-03-21 19:30 |
|
Assigned To | agv => bugmaster |
2012-03-22 08:33 | vro | Note Added: 0020083 | |
2012-03-22 09:19 | apn | Assigned To | bugmaster => apn |
2012-03-23 18:06 | apn | Note Added: 0020125 | |
2012-03-23 18:07 | apn | File Added: W5 | |
2012-03-23 18:08 | apn | Test case number | => chl 934 W5 |
2012-03-23 18:08 | apn | Assigned To | apn => bugmaster |
2012-03-23 18:08 | apn | Status | reviewed => tested |
2012-03-27 16:39 | bugmaster | Note Added: 0020170 | |
2012-03-27 16:39 | bugmaster | Status | tested => verified |
2012-03-27 16:39 | bugmaster | Resolution | open => fixed |
2012-03-27 16:39 | bugmaster | Assigned To | bugmaster => vro |
2012-03-29 17:26 | bugmaster | Changeset attached | => occt master c0a681bc |
2013-09-16 09:58 |
|
Relationship added | related to 0024176 |