0023023: VRML reader fails on attempt to read an attached WRL file